[package]
name = "external-ip"
version = "4.1.0"
authors = ["Dario Meloni <mellon85@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mellon85/external-ip"
description = """
Asynchronous library to retrieve the system external IP
"""

[dependencies]
futures = "0.3.9"
hyper-tls = "0.5.0"
hyper = {version="0.14.2", features=["client", "http1"]}
http = "0.2.3"
log = "0.4.11"
trust-dns-resolver = {version="0.22.0", features=["tokio-runtime"]}
igd = { version = "0.12.0", optional = true }
rand = "0.8.1"

[dev-dependencies]
tokio-test = "0.4.0"
mockall = "0.11.0"

[features]
default = ["discover_igd"]
discover_igd = ["igd"]
