[package]
name = "external-ip"
version = "4.2.0"
authors = ["Dario Meloni <mellon85@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mellon85/external-ip"
description = """
Asynchronous library to retrieve the system external IP
"""

[dependencies]
futures = "0.3.26"
hyper-tls = "0.5.0"
hyper = {version="0.14.23", features=["client", "http1"]}
http = "0.2.8"
log = "0.4.17"
trust-dns-resolver = {version="0.23.0", features=["tokio-runtime"]}
igd = { version = "0.12.0", optional = true }
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.3"

[features]
default = ["discover_igd"]
discover_igd = ["igd"]
