[package]
name = "external-ip"
version = "5.2.0"
authors = ["Dario Meloni <mellon85@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mellon85/external-ip"
description = """
Asynchronous library to retrieve the system external IP
"""

[dependencies]
futures = "0.3"
reqwest = {version = "0.12" }
log = "0.4"
hickory-resolver = "0.24"
igd = { version = "0.12", optional = true }
rand = "0.9"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[features]
default = ["discover_igd"]
discover_igd = ["igd"]
